--- a/API/API.csproj
+++ b/API/API.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+    <PackageReference Include="Two.AspNetCore.SpaServices.StaticFiles" Version="0.9.1" />
   </ItemGroup>
 
 </Project>
